# merch-shop/app/Models/Cart.php
@@ -91,7 +91,7 @@ class Cart extends Model
         foreach ($this->itemsByProductId as $productId => $cartItem)
         {
             $cartItem->price_item = $cartItem->product->price;
-            $cartItem->price_total = $cartItem->price_item * $cartItem->quantity;
+            $this->price_total = $cartItem->price_item * $cartItem->quantity;
         }
     }
 
