# merch-shop/app/OpenApi/RequestBodies/CartModRequestBody.php
@@ -1,0 +1,28 @@
+<?php
+
+namespace App\OpenApi\RequestBodies;
+
+use GoldSpecDigital\ObjectOrientedOAS\Objects\MediaType;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\RequestBody;
+use GoldSpecDigital\ObjectOrientedOAS\Objects\Schema;
+use Vyuldashev\LaravelOpenApi\Factories\RequestBodyFactory;
+
+class CartModRequestBody extends RequestBodyFactory
+{
+    public function build(): RequestBody
+    {
+        return RequestBody::create()
+            ->required()
+            ->description('Cart modification')
+            ->content(MediaType::json()->schema(
+                Schema::object()->properties(
+                    Schema::array('modifications')->items(
+                        Schema::object()->properties(
+                            Schema::integer('product_id'),
+                            Schema::integer('quantity')
+                        )
+                    )
+                )
+            ));
+    }
+}
